[package]
name = "sainte_lague"
version = "0.1.1"
authors = ["Julius Tens <mail@juliustens.eu>"]
edition = "2018"

description = "Sainte-Laguë method for seat distribution used in multiple parliamentary elections all over the world."
repository = "https://github.com/juliuste/sainte_lague.rs"
homepage = "https://github.com/juliuste/sainte_lague.rs"
readme = "readme.md"
keywords = ["election", "voting", "sainte-lague", "schepers", "webster"]
categories = ["algorithms", "mathematics", "science"]
license = "ISC"
exclude = [".travis.yml", ".editorconfig", ".gitignore"]

[dependencies]
rand = "0.8.5"
